# imgui_base

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cpp
3rdlibrary/freetype/lib/win/: freetype.lib
backends/: ApplicationSetting.cpp  ApplicationSetting.h  ImGuiApplication.cpp  ImGuiApplication.h  imgui_common_tools.cpp  imgui_common_tools.h  imgui_image_render.cpp  imgui_image_render.h  imgui_impl_common.cpp  imgui_impl_common.h  imgui_impl_common.mm  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_main_glfw_opengl3.cpp  imgui_main_win32_dx11.cpp
backends/ShaderCode/: Dx11_PixelShader.hlsl  OpenGL_FragmentShader.glsl
backends/darwin/: imgui_common_tools.mm
backends/glad/include/glad/: glad.h
backends/glad/src/: glad.c
backends/linux/: imgui_common_tools.cpp
backends/win32/: imgui_common_tools.cpp
cmdTools/: TransShaderCode.bat
tools/: ImGuiBaseTypes.cpp  ImGuiBaseTypes.h  ImGuiItem.cpp  ImGuiItem.h  ImGuiTools.cpp  ImGuiTools.h  ImGuiWindow.cpp  ImGuiWindow.h
